@@ -64,6 +64,9 @@ Avro 1.4.0 (unreleased)
 
   IMPROVEMENTS
 
+    AVRO-636. Expose Singleton Method for TracePlugin. (Patrick Wendell via 
+    philz)
+
     AVRO-614. Improve Trace frontend UI. (Patrick Wendell via philz)
 
     AVRO-629. Prefer the JSON module of python's stdlib over simplejson.
